# wxCppTemplate

./: .clang-tidy  CMakeLists.txt  README.md  install_dependencies.sh  justfile
scripts/: clean.sh
src/: SourceFiles.cmake  main.cpp  mainFrame.cpp  mainFrame.hpp
